--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 :root {
 	font-family: system-ui, sans-serif;
 	color-scheme: light;
+	scroll-behavior: smooth;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -29,3 +30,17 @@ header {
 	display: block;
 	width: 100%;
 }
+
+.slick-dots {
+	@apply absolute bottom-0 bg-black bg-opacity-70 h-10	
+}
+
+.slick-dots li button::before {
+	@apply text-lg text-white
+}
+
+.slick-dots li.slick-active button::before {
+	@apply text-orange-500
+}
+
+
