--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-p, a, span {
+p,
+a,
+span {
 	@apply text-sm;
 }
 
@@ -45,7 +47,7 @@ footer {
 }
 
 .slick-dots li.slick-active button::before {
-	@apply text-orange-500;
+	@apply text-custom-orange;
 }
 
 @media screen and (min-width: 640px) {
